# pypi_package_example

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.md  README.rst  make.bat  mypy.ini  pytest.ini  requirements.txt  setup.cfg  setup.py
doc/: api.rst  badges.rst  building_and_deployment.rst  code_formatting.rst  conf.py  continuous_integration.rst  core.rst  documentation.rst  example_directory_tree.rst  git.rst  github.rst  index.rst  poetry_start.rst  testing.rst  tips.rst  versioning.rst
pypi_package_example/: __init__.py
pypi_package_example/examples/: my_example.py
tests/: test_my_function.py
