[metadata]
name = pypi_package_example
author = Your Name Here
author-email = person@mail.example
home-page = https://pypi-package-example.readthedocs.io/
description = Sample Python Package
long-description = file: README.rst
license = MIT
license-file = license.rst
platform = any
keywords = packaging
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
packages = pypi_package_example
test_suite = tests
setup_requires =
    setuptools >=38.3.0
install_requires =
tests_require =

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError

[coverage:run]
source = pypi_package_example
omit =
    ./tests/*
    ./doc/*


